# Wb_orders_task

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
app/: main.py
app/clients/: telegram_client.py  wildberries_client.py
app/config/: logging.py  settings.py
app/services/: orders_service.py
app/storage/: csv_storage.py
app/utils/: dates.py
