[project]
name = "wb-orders-task"
version = "0.1.0"
description = ""
authors = [
    {name = "simbarilion",email = "nadezhda13popova@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.34.2,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "ruff (>=0.15.18,<0.16.0)",
    "pre-commit (>=4.6.0,<5.0.0)"
]

[tool.poetry]
package-mode = false

[tool.ruff]
line-length = 119
target-version = "py312"
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "env",
    ".env",
    "alembic/versions",
    "alembic/env.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

ignore = [
    "E203",
    "E701",
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"alembic/versions/*.py" = ["E501", "F401", "E402", "W291"]

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = true
